project/phase2/test/test_2_r04.out
Error type 4 at Line 6: "sum" is redefined
Error type 8 at Line 9: incompatiable return type
